force-app/main/default/objects/CopadoCO__c/CopadoCO__c.object-meta.xml
<CustomObject>
    <label>CopadoCO</label>
    <nameField>
        <label>CopadoCO Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CopadoCOs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>