force-app/main/default/objects/CopadoCO__c/fields/COLongText__c.field-meta.xml
<CustomField>
    <fullName>COLongText__c</fullName>
    <label>COLongText</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>