force-app/main/default/objects/CopadoCO__c/fields/COMPL__c.field-meta.xml
<CustomField>
    <fullName>COMPL__c</fullName>
    <label>COMPL</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>This</fullName>
            </value>
            <value>
                <fullName>That</fullName>
            </value>
            <value>
                <fullName>The Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>