force-app/main/default/objects/CopadoCO__c/fields/COText__c.field-meta.xml
<CustomField>
    <fullName>COText__c</fullName>
    <label>COText</label>
    <length>123</length>
    <type>Text</type>
</CustomField>